<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_main_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_main_mulitquery"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_main_siminfotoapnlist"
        android:icon="@drawable/ic_event_white_24dp"
        android:title="@string/showsiminfo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_main_add"
        android:icon="@drawable/pluspic"
        android:title="@string/add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_main_refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />

</menu>
