<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="huaqin.houlinyuan.a0920_apnsui.sim.SimBFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:fadingEdge="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragment2_siminfo_mainlayout"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:showDividers="middle"
            android:divider="@drawable/spliteline_shape"
            tools:context=".apn_crud.ApnDatilActivity">
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/carrierName"/>
                <TextView
                    android:id="@+id/fragment2_sim_carrierName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nulltext"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/countryIso"/>
                <TextView
                    android:id="@+id/fragment2_sim_countryIso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nulltext"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dataRoaming"/>
                <TextView
                    android:id="@+id/fragment2_sim_dataRoaming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nulltext"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/displayName"/>
                <TextView
                    android:id="@+id/fragment2_sim_displayName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nulltext"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iccId"/>
                <TextView
                    android:id="@+id/fragment2_sim_iccId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nulltext"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iconTint"/>
                <TextView
                    android:id="@+id/fragment2_sim_iconTint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nulltext"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number"/>
                <TextView
                    android:id="@+id/fragment2_sim_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nulltext"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simSlotIndex"/>
                <TextView
                    android:id="@+id/fragment2_sim_simSlotIndex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nulltext"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subscriptionId"/>
                <TextView
                    android:id="@+id/fragment2_sim_subscriptionId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nulltext"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mnc"/>
                <TextView
                    android:id="@+id/fragment2_sim_mnc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nulltext"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mcc"/>
                <TextView
                    android:id="@+id/fragment2_sim_mcc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nulltext"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deviceId"/>
                <TextView
                    android:id="@+id/fragment2_sim_deviceId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nulltext"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dataActivity"/>
                <TextView
                    android:id="@+id/fragment2_sim_dataActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nulltext"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dataState"/>
                <TextView
                    android:id="@+id/fragment2_sim_dataState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nulltext"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/networkOperatorForSubscription"/>
                <TextView
                    android:id="@+id/fragment2_sim_networkOperatorForSubscription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nulltext"/>
            </LinearLayout>



            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/networkOperatorName"/>
                <TextView
                    android:id="@+id/fragment2_sim_networkOperatorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nulltext"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simOperator"/>
                <TextView
                    android:id="@+id/fragment2_sim_simOperator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nulltext"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simOperatorNameForPhone"/>
                <TextView
                    android:id="@+id/fragment2_sim_simOperatorNameForPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nulltext"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simSerialNumber"/>
                <TextView
                    android:id="@+id/fragment2_sim_simSerialNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nulltext"/>
            </LinearLayout>



            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simState"/>
                <TextView
                    android:id="@+id/fragment2_sim_simState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nulltext"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subscriberId"/>
                <TextView
                    android:id="@+id/fragment2_sim_subscriberId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nulltext"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/isNetworkRoaming"/>
                <TextView
                    android:id="@+id/fragment2_sim_isNetworkRoaming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nulltext"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hasIccCard"/>
                <TextView
                    android:id="@+id/fragment2_sim_hasIccCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nulltext"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
